--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -1,4 +1,4 @@
-block variables
+block variable
 
 doctype html
 html(lang="en")
@@ -6,7 +6,10 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Start
+    if !title
+      title ID
+    else
+      title= title
     link(rel="stylesheet", href="/main.css")
   body
     include ../components/header
