--- a/src/pug/page/portfolio.pug
+++ b/src/pug/page/portfolio.pug
@@ -1,10 +1,13 @@
 extends ../layout/main
 
+block variable
+  - const title = 'Portfolio'
+
 block content
   section.section
     .container
       .container__inside
-        h1.title-h1.section__title Our blog.
+        h1.title-h1.section__title We help business grow taller.
         p.text-main.section__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
 
         .section__posts
