--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -24,7 +24,7 @@
 }
 
 body.--menu .container__inside,
-body.--post .container__inside {
+body.--popup .container__inside {
   margin-left: 0;
 
   @media (min-width: 768px) {
