--- a/src/pug/page/blog.pug
+++ b/src/pug/page/blog.pug
@@ -1,5 +1,8 @@
 extends ../layout/main
 
+block variable
+  - const title = 'Blog'
+
 block content
   section.section.section-blog
     .container
@@ -11,6 +14,11 @@ block content
           input(type="text", placeholder="Search Articles...", name="search")
           button
             img(src="/img/icon/search.svg", alt="")
+        
+        .section__tabs
+          a(href="#").link-main Business
+          a(href="#").link-main Development
+          a(href="#").link-main Design
 
         .section__posts
           each card in [1, 2, 3, 4]
@@ -22,13 +30,12 @@ block content
         
         a(href="#").btn-main.section__more Load more
   
-  .single
-    .single__wrap
-      img(src="/img/blog/item-1.jpg", alt="").single__img
-
-      h3.title-h3.single__title Blog title number one how we use small grid in our site
-      h4.title-h4.single__subtitle Blog title number one how we use small grid in our site
-      p.text-main.single__text Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.<br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-      p.text-main.single__text Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.<br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-      h4.title-h4.single__subtitle Blog title number one how we use small grid in our site
-      img(src="/img/single/item-2.jpg", alt="").single__img
+  .popup
+    .post.popup__wrap
+      img(src="/img/blog/item-1.jpg", alt="").post__img
+      h3.title-h3.post__title Blog title number one how we use small grid in our site
+      h4.title-h4.post__subtitle Blog title number one how we use small grid in our site
+      p.text-main.post__text Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.<br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+      p.text-main.post__text Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.<br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+      h4.title-h4.post__subtitle Blog title number one how we use small grid in our site
+      img(src="/img/single/item-2.jpg", alt="").post__img
