--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -17,4 +17,4 @@ footer.footer
         a(href="#").link-main.text-gray LinkedIn
         a(href="#").link-main.text-gray Facebook
 
-      a(href="/term.html").link-main Terms & Privacy
+      a(href="/term.html").link-main.footer__term Terms & Privacy
