--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -16,8 +16,11 @@ button.hamburger
 
 .menu
   .menu__list
+    a(href="/projects.html").title-h3 Portfolio
+    a(href="/blog.html").title-h3 About us
     a(href="/projects.html").title-h3 Our projects
     a(href="/blog.html").title-h3 Blog
+    a(href="/blog.html").title-h3 Fill out brief
     a(href="/contact.html").title-h3 Contact
     a(href="/job.html").title-h3 Jobs
     a(href="/partners.html").title-h3 For partners
