--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -5,14 +5,14 @@
 }
 
 .container__inside {
-  transition: 0.3s margin-left ease;
-
   @media (min-width: 768px) {
     width: calc(var(--container-column-width) * 10);
     margin-left: calc(var(--container-column-width) * 3);
   }
   
   @media (min-width: 1200px) {
+    transition: 0.3s transform ease;
+    // transition: 0.3s margin-left ease;
     width: calc(var(--container-column-width) * 11);
     margin-left: calc(var(--container-column-width) * 10);
   }
@@ -24,18 +24,13 @@
 }
 
 body.--menu .container__inside,
-body.--popup .container__inside {
-  margin-left: 0;
-
-  @media (min-width: 768px) {
-    margin-left: calc(var(--container-column-width) * 3);
-  }
-  
+body.--popup .container__inside {  
   @media (min-width: 1200px) {
-    margin-left: calc(var(--container-column-width) * 2);
+    transform: translateX(calc(var(--container-column-width) * -8));
+    // margin-left: calc(var(--container-column-width) * 2);
   }
 
-  @media (min-width: 1900px) {
-    margin-left: calc(var(--container-column-width) * 3);
-  }
+  // @media (min-width: 1900px) {
+  //   margin-left: calc(var(--container-column-width) * 3);
+  // }
 }
