--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -45,6 +45,12 @@
     }
   }
 
+  & picture#{&__img} img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
   &__title {
     margin-bottom: 20px;
   }
