--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,9 +3,20 @@
 
   &__columns {
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: repeat(2, 1fr);
     justify-items: start;
-    gap: 20px;
     margin-bottom: 80px;
+    gap: 20px 0;
+
+    @media (min-width: 760px) {
+      grid-template-columns: 200px 1fr;
+      gap: 20px;
+    }
+  }
+
+  &__term {
+    @media (max-width: 759px) {
+      display: none;
+    }
   }
 }
