--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -13,6 +13,12 @@
   top: 13px;
   left: 20px;
 
+  @media (max-width: 760px) {
+    &__img {
+      width: 40px;
+    }
+  }
+
   @media (min-width: 760px) {
     left: calc((100vw - var(--container-width)) / 2);
   }
@@ -21,37 +27,40 @@
 .header-nav {
   display: flex;
   align-items: center;
-  gap: 80px;
+  gap: 50px;
   height: 60px;
+  padding-top: 3px;
 
   @media (min-width: 760px) {
     height: 90px;
+    gap: 80px;
   }
 
   @media (max-width: 1199px) {
-    gap: 50px;
-  }
-
-  @media (max-width: 759px) {
     justify-content: flex-end;
-    margin-right: 63px;
+    margin-right: 50px;
 
     & a:nth-child(-n + 2) {
       display: none;
     }
+  }
+
+  @media (max-width: 575px) {
+    margin-right: 63px;
   }
 }
 
 .hamburger {
   position: fixed;
   z-index: 1002;
-  top: 20px;
-  right: 14px;
+  top: 5px;
+  right: 12px;
   width: 50px;
   height: 50px;
   cursor: pointer;
 
   @media (min-width: 760px) {
+    top: 20px;
     right: calc((100vw - var(--container-width)) / 2 - 6px);
   }
 
@@ -70,9 +79,13 @@
     }
 
     &:nth-child(1) {
-      top: calc(50% - 12px);
+      top: calc(50% - 11px);
       transition: 0.3s ease;
       transition-property: top, transform;
+
+      @media (min-width: 760px) {
+        top: calc(50% - 12px);
+      }
     }
 
     &:nth-child(2) {
@@ -81,9 +94,13 @@
     }
 
     &:nth-child(3) {
-      top: calc(50% + 12px);
+      top: calc(50% + 11px);
       transition: 0.3s ease;
       transition-property: top, transform;
+
+      @media (min-width: 760px) {
+        top: calc(50% + 12px);
+      }
     }
   }
 
@@ -107,19 +124,34 @@
 
 .menu {
   position: fixed;
-  padding: 120px 67px;
+  padding: 80px 91px 80px 73px;
   top: 0;
   right: 0;
   width: 100%;
+  max-height: 100vh;
   bottom: 0;
   z-index: 1000;
   background-color: $white;
+  overflow: auto;
   transition: 0.3s transform ease;
   transform: translateX(100%);
 
+  @media (max-width: 359px) {
+    padding: 80px 60px 80px 40px;
+  }
+
+  @media (min-width: 575px) {
+    padding: 80px 120px;
+  }
+
   @media (min-width: 1200px) {
+    padding: 120px var(--container-column-width);
+    width: calc((100vw - var(--container-width)) / 2 + var(--container-column-width) * 10);
     border-left: 1px solid #656a77;
-    width: calc((100vw - var(--container-width)) / 2 + 68.3px * 10);
+  }
+
+  @media (min-width: 1900px) {
+    width: calc((100vw - var(--container-width)) / 2 + var(--container-column-width) * 9);
   }
 
   body.--menu {
@@ -134,17 +166,43 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
-    margin-bottom: 80px;
+    gap: 15px;
+    margin-bottom: 50px;
+
+    @media (min-width: 760px) {
+      gap: 20px;
+      margin-bottom: 80px;
+
+      & a:nth-child(-n + 2),
+      & a:nth-child(5) {
+        display: none;
+      }
+    }
   }
 
   &__columns {
     display: grid;
-    grid-template-columns: 180px 180px;
-    gap: 20px;
+    grid-template-columns: repeat(2, auto);
+    justify-content: space-between;
+    gap: 15px 20px;
+
+    @media (min-width: 400px) {
+      justify-content: flex-start;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (min-width: 575px) {
+      grid-template-columns: 180px 180px;
+      gap: 20px;
+    }
   }
 
   &__sitemap {
-    margin-top: 80px;
+    margin-top: 50px;
+
+    @media (min-width: 760px) {
+
+      margin-top: 80px;
+    }
   }
 }
