--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -6,6 +6,17 @@
     margin: 260px 0;
   }
 
+  &--error {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: calc(100svh - 360px);
+
+    @media (min-width: 760px) {
+      height: calc(100svh - 520px);
+    }
+  }
+
   &__title {
     margin-bottom: 20px;
   }
@@ -38,6 +49,10 @@
     gap: 20px;
     margin-top: 80px;
   }
+
+  &__home {
+    margin-top: 30px;
+  }
 }
 
 .swiper {
@@ -48,10 +63,14 @@
   &__works {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px 80px;
+    gap: 28px 20px;
 
-    @media (max-width: 1599px) {
+    @media (min-width: 1200px) {
       gap: 30px 79px;
+    }
+
+    @media (min-width: 1900px) {
+      gap: 30px 80px;
     }
   }
 }
