--- a/src/pug/page/index.pug
+++ b/src/pug/page/index.pug
@@ -14,8 +14,8 @@ block content
         .section__posts
           each post in [1, 2, 3]
             .card
-              +img(`/img/post/item-${post}`, 'card__img')
-              //- img(src=`/img/post/item-${post}.jpg`, alt="").card__img
+              //- +img(`/img/post/item-${post}`, 'card__img')
+              img(src=`/img/post/item-${post}.jpg`, alt="").card__img
               h3.title-h3.card__title We flip your user’s perceptions
               p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies. Pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.s
         a(href="#").link-main.section__more More about us
