--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -8,6 +8,12 @@ body {
   &.--menu {
     overflow: hidden;
   }
+
+  @media (max-width: 759px) {
+    &.--popup {
+      overflow: hidden;
+    }
+  }
 }
 
 a {
@@ -24,15 +30,15 @@ a {
 }
 
 :root {
-  --container-width: 100%;
-  --container-columns: 4;
+  --container-width: calc(100vw - 40px);
+  --container-columns: 12;
   --container-column-width: calc(var(--container-width) / var(--container-columns));
 
   @media (min-width: 568px) {
     --container-width: 500px;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 760px) {
     --container-width: 700px;
     --container-columns: 14;
   }
