--- a/src/scss/helper/_grid.scss
+++ b/src/scss/helper/_grid.scss
@@ -7,28 +7,31 @@ body {
 .grid::before {
   position: fixed;
   top: 0;
-  right: 0;
+  // right: 0;
+  // width: 100%;
+  // width: var(--container-width);
   bottom: 0;
-  left: 0;
+  left: calc((100% - var(--container-width)) / 2);
+  right: calc((100% - var(--container-width)) / 2);
   z-index: 10000;
 
   content: "";
   pointer-events: none;
 
-  border: solid rgba(#007EFF, 0.2);
-  border-width: 0 20px;
+  // border: solid rgba(#007EFF, 0.2);
+  // border-width: 0 20px;
 
   background-image: repeating-linear-gradient(
     to right,
     rgba(black, 0.2) 0,
-    rgba(black, 0.2) 1px,
-    transparent 1px,
-    transparent var(--container-column-width)
+    rgba(black, 0.2) 0.5px,
+    transparent 0.5px,
+    transparent calc(var(--container-column-width) - 0.5px),
+    rgba(black, 0.2) calc(var(--container-column-width) - 0.5px),
+    rgba(black, 0.2) var(--container-column-width)
   );
+  border: solid rgba(black, 0.2);
+  border-width: 0 0.5px;
 
   background-repeat: no-repeat;
-
-  @media (min-width: 568px) {
-    border-width: 0 calc((var(--screen-width) - var(--container-width)) / 2);
-  }
 }
